[package]
name = "scrap-poloniex"
version = "0.1.0"
edition = "2021"

[dependencies]
tungstenite = { version = "0.19.0", features = ["native-tls"] }
async-tungstenite = { version = "0.28.2", features = ["async-std-runtime", "async-tls"] }
url = { version = "2.4.0" }
env_logger = { version = "0.10.0" }
log = { version = "0.4.19" }
serde = { version = "1.0.170", features = ["derive"] }
serde_json = { version = "1.0.100" }
chrono = { version = "0.4.26", features = ["serde"] }
futures = { version = "0.3" }
tokio = { version = "1", features = ["full"] }
dotenv = { version = "0.15.0" }
clickhouse = { version = "0.13.0", features = ["time"] }
time = { version = "0.3.36", features = ["parsing", "macros"]}
